--- a/samples/ControlGallery/Views/InitiateCommands/SearchBarPage.razor
+++ b/samples/ControlGallery/Views/InitiateCommands/SearchBarPage.razor
@@ -14,8 +14,8 @@
 </ContentPage>
 
 @code {
-    string[] _allItems = new[]
-    {
+    string[] _allItems = 
+    [
         "Old Fashioned",
         "Negroni",
         "Daiquiri",
@@ -24,7 +24,7 @@
         "Espresso Martini",
         "Whiskey Sour",
         "Manhattan"
-    };
+    ];
 
     protected override void OnInitialized()
     {
