--- a/samples/ControlGallery/Views/Shell/SearchHandlerPage.razor
+++ b/samples/ControlGallery/Views/Shell/SearchHandlerPage.razor
@@ -19,7 +19,7 @@
 
     <ChildContent>
         <VerticalStackLayout>
-            <Label>Enter the text in the seach field above. Try 'ips'.</Label>
+            <Label>Enter the text in the search field above. Try 'ips'.</Label>
 
             @if (_selectedItem != null)
             {
