(WIP) ItemsControl, sync data templates

--- a/src/BlazorBindings.Avalonia.HelloWorld/MainPage.razor
+++ b/src/BlazorBindings.Avalonia.HelloWorld/MainPage.razor
@@ -22,6 +22,7 @@
     <ListBox ItemsSource="Items" T="string">
         <ItemTemplate>
             <StackPanel>
+                <TextBlock Text="Content:"></TextBlock>
                 <TextBlock Text="@context"></TextBlock>
             </StackPanel>
         </ItemTemplate>
