Fix sample application to work with DataGrid styles (StyleInclude is tricky)

--- a/src/BlazorBindings.Avalonia.HelloWorld/MainPage.razor
+++ b/src/BlazorBindings.Avalonia.HelloWorld/MainPage.razor
@@ -1,45 +1,102 @@
 ﻿@* @page "/main" *@
 
+@namespace BlazorBindings.Avalonia.HelloWorld
+
 @using BlazorBindings.AvaloniaBindings.Elements
 @using System.Collections.ObjectModel;
 @using BlazorBindings.AvaloniaBindings.Elements.Shapes
-@using Microsoft.AspNetCore.Components.Rendering;
 @using global::Avalonia.Layout
 @using global::Avalonia
 @using global::Avalonia.Media;
 @using global::Avalonia.Media.Imaging;
 
-<Window Topmost="true" Width="600" Height="500">
-    <StackPanel HorizontalAlignment="HorizontalAlignment.Center"
-                VerticalAlignment="VerticalAlignment.Center">
-        <TextBlock Text="Hello World"></TextBlock>
-        @if (buttonVisible == true)
-        {
-            <Button OnClick="OnCounterClicked">Click me</Button>
-        }
-        <TextBlock Text="@ButtonText"></TextBlock>
+<Window Title="Blazor Bindings for Avalonia" Topmost="true" Width="600" Height="500">
+    <ScrollViewer>
+        <StackPanel HorizontalAlignment="HorizontalAlignment.Center"
+                    VerticalAlignment="VerticalAlignment.Center">
 
-        <CheckBox @bind-IsChecked="buttonVisible">Button visible</CheckBox>
+            <Border Padding="new Thickness(10,0,10,0)">
+                <AutoCompleteBox ItemsSource="Items"></AutoCompleteBox>
+            </Border>
+            <Canvas Width="100" Height="50">
+                <Ellipse Width="100" Height="25" Fill="Brushes.Red"></Ellipse>
+            </Canvas>
+            <ComboBox ItemsSource="Items">
+            </ComboBox>
+            <TextBox Text="Hallo Welt">
+                <ContextMenuSlot>
+                    <ContextMenu T="object">
+                        <MenuItem T="object" Header="@("Copy")"/>
+                        <MenuItem T="object" Header="@("Paste")" />
+                    </ContextMenu>
+                </ContextMenuSlot>
+            </TextBox>
+            <TextBlock Text="Hello World"></TextBlock>
+            @if (buttonVisible == true)
+            {
+                <Button OnClick="OnCounterClicked">Click me</Button>
+            }
+            <TextBlock Text="@ButtonText"></TextBlock>
 
-        <ListBox ItemsSource="Items">
-            <ItemTemplate>
-                <StackPanel>
-                    <TextBlock Text="Content:"></TextBlock>
-                    <TextBlock Text="@context"></TextBlock>
-                </StackPanel>
-            </ItemTemplate>
-            <ItemsPanel>
-                <StackPanel Orientation="Orientation.Horizontal"></StackPanel>
-            </ItemsPanel>
-        </ListBox>
-        <Ellipse Width="slider" Height="slider/2" Fill="Brushes.Red"></Ellipse>
-        <Slider @bind-Value="slider"></Slider>
-        <TextBlock Text="@slider.ToString()"></TextBlock>
-    </StackPanel>
+            <CheckBox @bind-IsChecked="buttonVisible">Button visible</CheckBox>
+
+            <ListBox ItemsSource="Items">
+                <ItemTemplate>
+                    <StackPanel>
+                        <TextBlock Text="Content:"></TextBlock>
+                        <TextBlock Text="@context"></TextBlock>
+                    </StackPanel>
+                </ItemTemplate>
+                <ItemsPanel>
+                    <StackPanel Orientation="Orientation.Horizontal"></StackPanel>
+                </ItemsPanel>
+            </ListBox>
+            <StackPanel Orientation="Orientation.Horizontal" Margin="new Thickness(0,20,0,0)">
+                <TextBlock Text="Ellipse size: "></TextBlock>
+                <TextBlock Text="@slider.ToString()"></TextBlock>
+            </StackPanel>
+            <Slider @bind-Value="slider"></Slider>
+
+            <Ellipse Width="slider" Height="slider/2" Fill="Brushes.Red"></Ellipse>
+
+            <Calendar></Calendar>
+            <CalendarDatePicker>
+            </CalendarDatePicker>
+
+            <TabControl T="object">
+                <TabItem Header="@("Tab 1")">
+                    <TextBlock Text="Hello 1"></TextBlock>
+                </TabItem>
+                <TabItem Header="@("Tab 2")">
+                    <TextBlock Text="Hello 2"></TextBlock>
+                </TabItem>
+                <TabItem Header="@("Tab 3")">
+                    <TextBlock Text="Hello 3"></TextBlock>
+                </TabItem>
+            </TabControl>
+
+            <DataGrid T="string"
+                      Background="Brushes.Gray"
+                      MinWidth="100"
+                      MinHeight="300"
+                      ItemsSource="Items" AutoGenerateColumns="true" IsReadOnly="false"
+                      GridLinesVisibility="global::Avalonia.Controls.DataGridGridLinesVisibility.All"
+                      BorderThickness="new Thickness(1,1,1,1)"
+                      BorderBrush="Brushes.Green"
+                      ColumnHeaderHeight="40"
+                      CanUserResizeColumns="true">
+                <RowDetailsTemplate>
+                    <StackPanel>
+                    </StackPanel>
+                </RowDetailsTemplate>
+
+            </DataGrid>
+        </StackPanel>
+    </ScrollViewer>
 </Window>
 
 @code {
-    double slider = 0;
+    double slider = 50;
     int count = 0;
     bool? buttonVisible { get; set; } = true;
     ObservableCollection<string> Items { get; set; } = new ObservableCollection<string>(new[]
