Attached properties with extension methods working prototype

--- a/src/BlazorBindings.Avalonia.HelloWorld/MainPage.razor
+++ b/src/BlazorBindings.Avalonia.HelloWorld/MainPage.razor
@@ -78,7 +78,9 @@
             </StackPanel>
             <Slider @bind-Value="slider"></Slider>
 
-            <Ellipse Attached="@((x) => {} )" Width="slider" Height="slider/2" Fill="Brushes.Red"
+            @* Attached="@((x) => x.ToolTip_TipExtension("func 5 tool tip"))" *@
+            <Ellipse  Width="slider" Height="slider/2" Fill="Brushes.Red"
+                     Attached="@((x) => { x.ToolTip_TipExtension("tool tip text");})"
                      ToolTip_Placement="@(global::Avalonia.Controls.PlacementMode.BottomEdgeAlignedRight)">
                 @* <ToolTip_Tip>
                     
