--- a/src/BlazorBindings.Avalonia.HelloWorld/App.axaml
+++ b/src/BlazorBindings.Avalonia.HelloWorld/App.axaml
@@ -1,8 +1,8 @@
 <local:BlazorBindingsApplicationMainPage
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    x:Class="BlazorBindings.Avalonia.HelloWorld.App"
-    xmlns:local="using:BlazorBindings.Avalonia.HelloWorld"
+    x:Class="BlazorBindings.AvaloniaBindings.HelloWorld.App"
+    xmlns:local="using:BlazorBindings.AvaloniaBindings.HelloWorld"
     RequestedThemeVariant="Default">
 	<!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
