Support "class" attributes to be passed down to Avalonia's "Classes" property

--- a/src/BlazorBindings.Avalonia.HelloWorld/App.axaml
+++ b/src/BlazorBindings.Avalonia.HelloWorld/App.axaml
@@ -13,5 +13,9 @@
 	<local:BlazorBindingsApplicationMainPage.Styles>
 		<FluentTheme />
 		<StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
+
+		<Style Selector="Button">
+			<Setter Property="FontWeight" Value="Black" />
+		</Style>
 	</local:BlazorBindingsApplicationMainPage.Styles>
 </local:BlazorBindingsApplicationMainPage>
