Support animated page transitions, support "reverse" page transitions

--- a/src/BlazorBindings.Avalonia/Navigation/NavigationView.axaml
+++ b/src/BlazorBindings.Avalonia/Navigation/NavigationView.axaml
@@ -2,9 +2,60 @@
 	xmlns="https://github.com/avaloniaui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	x:Class="BlazorBindings.AvaloniaBindings.Navigation.NavigationView"
+	xmlns:local="using:BlazorBindings.AvaloniaBindings.Navigation"
 	>
+	<!-- Workaround until https://github.com/AvaloniaUI/Avalonia/pull/13003 is merged and released -->
+	<Panel.Resources>
+		<ControlTheme x:Key="{x:Type local:ReversableTransitioningContentControl}"
+                TargetType="local:ReversableTransitioningContentControl">
+			<!--  Set Defaults  -->
+			<Setter Property="Template">
+				<ControlTemplate>
+					<Panel>
+						<ContentPresenter Name="PART_ContentPresenter"
+										  Background="{TemplateBinding Background}"
+										  BorderBrush="{TemplateBinding BorderBrush}"
+										  BorderThickness="{TemplateBinding BorderThickness}"
+										  CornerRadius="{TemplateBinding CornerRadius}"
+										  ContentTemplate="{TemplateBinding ContentTemplate}"
+										  Padding="{TemplateBinding Padding}"
+										  VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+										  HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" />
+						<ContentPresenter Name="PART_ContentPresenter2"
+										  Background="{TemplateBinding Background}"
+										  BorderBrush="{TemplateBinding BorderBrush}"
+										  BorderThickness="{TemplateBinding BorderThickness}"
+										  CornerRadius="{TemplateBinding CornerRadius}"
+										  ContentTemplate="{TemplateBinding ContentTemplate}"
+										  Padding="{TemplateBinding Padding}"
+										  VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+										  HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" />
+					</Panel>
+				</ControlTemplate>
+			</Setter>
+		</ControlTheme>
+	</Panel.Resources>
+	<Panel.Styles>
+		<Style Selector="local|ReversableTransitioningContentControl:not(.shouldAnimate)">
+			<Setter Property="PageTransition" Value="{x:Null}" />
+		</Style>
+		
+		<Style Selector="local|ReversableTransitioningContentControl.shouldAnimate">
+			<Setter Property="PageTransition">
+				<PageSlide Duration="0:0:1" Orientation="Vertical" SlideInEasing="CubicEaseInOut" SlideOutEasing="CubicEaseInOut" />
+			</Setter>
+		</Style>
+		
+		<Style Selector="local|ReversableTransitioningContentControl.reverseAnimate">
+			<Setter Property="IsTransitionReversed" Value="True" />
+		</Style>
+	</Panel.Styles>
 	<Grid>
-		<ContentPresenter x:Name="Presenter" Content="{Binding CurrentPage}"></ContentPresenter>
+		<!--<ContentPresenter x:Name="Presenter" Content="{Binding CurrentPage}"></ContentPresenter>-->
+		<local:ReversableTransitioningContentControl x:Name="Presenter" Content="{Binding CurrentPage}"
+									 Classes.shouldAnimate="{Binding ShouldAnimate}"
+									 Classes.reverseAnimate="{Binding ReverseAnimate}">
+		</local:ReversableTransitioningContentControl>
 		<ItemsControl x:Name="ModalItemsControl">
 			<ItemsControl.ItemsPanel>
 				<ItemsPanelTemplate>
